routing and config integration work in progress

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,6 +1,15 @@
+server {
+    listen      localhost:8081;
+    server_name dev.webserv;
+
+    location / {
+		root    /rootbang;
+        index   index.html;
+    }
+}
 
 server {
-    listen      80;
+    listen      localhost:80;
     server_name example.org www.example.org;
     root        /data/www;
 
@@ -11,18 +20,21 @@ server {
 	}
 
     location / {
+		root /basic;
         index   index.html index.php;
 		autoindex on;
     }
 
-    location ~* \.(gif|jpg|png)$ {
-        
+    location ~ \.(gif|jpg|png)$ {
+		root /imgroot;
     }
 
     location ~ \.php$ {
+		root /phproot;
         # fastcgi_pass  localhost:9000;
         # fastcgi_param SCRIPT_FILENAME
         #              $document_root$fastcgi_script_name;
         # include       fastcgi_params;
     }
 }
+
