--- a/webserv.conf
+++ b/webserv.conf
@@ -1,40 +1,34 @@
+# server {
+#     listen      localhost:8001;
+#     server_name example.org www.example.org;
+#     root        /simple_site;
+
+# 	error_page 404 /404.html;
+# 	location = /404.html {
+# 		root /simple_site/error_pages/;
+# 	}
+
+#     location / {
+#         index   index.html index.php;
+# 		autoindex on;
+#     }
+
+#     location ~ \.(gif|jpg|png)$ {
+# 		root	/imgroot;
+#     }
+
+#     location ~ \.php$ {
+# 		root	/phproot;
+#     }
+# }
+
 server {
-    listen      localhost:8081;
+	listen      localhost:8001;
     server_name dev.webserv;
+    root        /simple_site;
 
-    location / {
-		root    /rootbang;
-        index   index.html;
-    }
-}
-
-server {
-    listen      localhost:80;
-    server_name example.org www.example.org;
-    root        /data/www;
-
-	error_page 404 /custom_404.html;
-	location = /custom_404.html/ {
-		root /usr/share/nginx/html;
-		internal;
+	location / {
+		index other.html;
 	}
-
-    location / {
-		root /basic;
-        index   index.html index.php;
-		autoindex on;
-    }
-
-    location ~ \.(gif|jpg|png)$ {
-		root /imgroot;
-    }
-
-    location ~ \.php$ {
-		root /phproot;
-        # fastcgi_pass  localhost:9000;
-        # fastcgi_param SCRIPT_FILENAME
-        #              $document_root$fastcgi_script_name;
-        # include       fastcgi_params;
-    }
 }
 
