--- a/webserv.conf
+++ b/webserv.conf
@@ -1,34 +1,35 @@
-# server {
-#     listen      localhost:8001;
-#     server_name example.org www.example.org;
-#     root        /simple_site;
+server {
+	listen      localhost:8001;
+    server_name webserv.com;
 
-# 	error_page 404 /404.html;
-# 	location = /404.html {
-# 		root /simple_site/error_pages/;
-# 	}
+	# error_page 404 /simple_site/error_pages/xxx.html;
 
-#     location / {
-#         index   index.html index.php;
-# 		autoindex on;
-#     }
+	location / {
+    	root        /simple_site;
+		index		index.html;
+	}
 
-#     location ~ \.(gif|jpg|png)$ {
-# 		root	/imgroot;
-#     }
+	location ~ \.php$ {
+    	root        /simple_site/php_files;
+		# index		cgi-test.php;
+	}
 
-#     location ~ \.php$ {
-# 		root	/phproot;
-#     }
-# }
+	location /php {
+    	alias       /simple_site/php_files;
+		index		cgi-test.php;
+	}
+
+	location ~ ^/([^/]+)\.(png|jpg)$ {
+    	alias        /$2_files/$1.$2;
+	}
+}
 
 server {
 	listen      localhost:8001;
     server_name dev.webserv;
-    root        /simple_site;
 
 	location / {
-		index other.html;
+    	root        /simple_site/php_files;
+		index 		cgi-test.php;
 	}
 }
-
