--- a/webserv.conf
+++ b/webserv.conf
@@ -2,16 +2,19 @@ server {
 	listen      localhost:8001;
     server_name webserv.com;
 
-	# error_page 404 /simple_site/error_pages/xxx.html;
+	error_page 404 /simple_site/error_pages/xxx.html;
+
+	auth_basic_user_file /credentials.txt;
 
 	location / {
     	root        /simple_site;
 		index		index.html;
+
+		auth_basic	"Private domain";
 	}
 
 	location ~ \.php$ {
     	root        /simple_site/php_files;
-		# index		cgi-test.php;
 	}
 
 	location /php {
