adapted request_router to take full request

--- a/webserv.conf
+++ b/webserv.conf
@@ -1,38 +1,40 @@
-server {
-	listen      localhost:8001;
-    server_name webserv.com;
+# server {
+# 	listen      localhost:8001;
+#     server_name webserv.com;
 
-	error_page 404 /simple_site/error_pages/xxx.html;
+# 	error_page 404 /simple_site/error_pages/xxx.html;
 
-	auth_basic_user_file /credentials.txt;
+# 	auth_basic_user_file /credentials.txt;
 
-	location / {
-    	root        /simple_site;
-		index		index.html;
+# 	location / {
+#     	root        /simple_site;
+# 		index		index.html;
 
-		auth_basic	"Private domain";
-	}
+# 		auth_basic	"Private domain";
+# 	}
 
-	location ~ \.php$ {
-    	root        /simple_site/php_files;
-	}
+# 	location ~ \.php$ {
+#     	root        /simple_site/php_files;
+# 	}
 
-	location /php {
-    	alias       /simple_site/php_files;
-		index		cgi-test.php;
-	}
+# 	location /php {
+#     	alias       /simple_site/php_files;
+# 		index		cgi-test.php;
+# 	}
 
-	location ~ ^/([^/]+)\.(png|jpg)$ {
-    	alias        /$2_files/$1.$2;
-	}
-}
+# 	location ~ ^/([^/]+)\.(png|jpg)$ {
+#     	alias        /$2_files/$1.$2;
+# 	}
+# }
 
 server {
 	listen      localhost:8001;
     server_name dev.webserv;
+	
+	error_page 404 /simple_site/error_pages/xxx.html;
 
 	location / {
-    	root        /simple_site/php_files;
-		index 		cgi-test.php;
+    	root        /simple_site;
+		index 		index.html;
 	}
 }
