--- a/webserv.conf
+++ b/webserv.conf
@@ -28,12 +28,14 @@
 # }
 
 server {
-	listen      localhost:8002;
+	listen      localhost:8001;
     server_name dev.webserv;
 	
 	error_page 404 /simple_site/error_pages/xxx.html;
 
 	location / {
+		# auth_basic	"My realm";
+		# auth_basic_user_file /credentials.txt;
     	root        /simple_site;
 		index 		index.html;
 	}
