set up env variables for cgi

--- a/webserv.conf
+++ b/webserv.conf
@@ -28,7 +28,7 @@
 # }
 
 server {
-	listen      localhost:8001;
+	listen      0.0.0.0:7001;
     server_name dev.webserv;
 	
 	error_page 404 /simple_site/error_pages/xxx.html;
@@ -36,7 +36,13 @@ server {
 	location / {
 		# auth_basic	"My realm";
 		# auth_basic_user_file /credentials.txt;
-    	root        /simple_site;
+    	alias        /simple_site;
 		index 		index.html;
+	}
+
+	location ~ ^(.+\.php)(/.*)?$ {
+		root				/simple_site/php_files;
+		execute_cgi			php;
+		cgi_split_path_info ^(.+\.php)(/.*)?$;
 	}
 }
