set up env variables for cgi

--- a/webserv.conf
+++ b/webserv.conf
@@ -28,7 +28,7 @@
 # }
 
 server {
-	listen      0.0.0.0:7001;
+	listen      0.0.0.0:8001;
     server_name dev.webserv;
 	
 	error_page 404 /simple_site/error_pages/xxx.html;
@@ -36,7 +36,7 @@ server {
 	location / {
 		# auth_basic	"My realm";
 		# auth_basic_user_file /credentials.txt;
-    	alias        /simple_site;
+    	root        /simple_site;
 		index 		index.html;
 	}
 
