added timeout to cgi + refactoring

--- a/webserv.conf
+++ b/webserv.conf
@@ -28,7 +28,7 @@
 # }
 
 server {
-	listen      0.0.0.0:8001;
+	listen      0.0.0.0:8002;
     server_name dev.webserv;
 	
 	error_page 404 /simple_site/error_pages/xxx.html;
@@ -40,9 +40,9 @@ server {
 		index 		index.html;
 	}
 
-	location ~ ^(.+\.php)(/.*)?$ {
+	location ~ ^(.+\.(?:php|sh))(/.*)?$ {
 		root				/simple_site/php_files;
-		execute_cgi			php;
-		cgi_split_path_info ^(.+\.php)(/.*)?$;
+		execute_cgi			auto;
+		cgi_split_path_info ^(.+\.(?:php|sh))(/.*)?$;
 	}
 }
