--- a/webserv.conf
+++ b/webserv.conf
@@ -27,9 +27,10 @@
 # 	}
 # }
 
-server {
-	listen      0.0.0.0:8002;
-    server_name dev.webserv;
+server
+{
+	listen      0.0.0.0:8001;
+    server_name webserv.com;
 	
 	error_page 404 /simple_site/error_pages/xxx.html;
 
