added method filter directive for routes

--- a/webserv.conf
+++ b/webserv.conf
@@ -35,13 +35,15 @@ server
 	error_page 404 /simple_site/error_pages/xxx.html;
 
 	location / {
+		accept_methods	all;
 		# auth_basic	"My realm";
 		# auth_basic_user_file /credentials.txt;
-    	root        /simple_site;
-		index 		index.html;
+    	root			/simple_site;
+		index			index.html;
 	}
 
 	location ~ ^(.+\.(?:php|sh))(/.*)?$ {
+		accept_methods		GET POST;
 		root				/simple_site/php_files;
 		execute_cgi			auto;
 		cgi_split_path_info ^(.+\.(?:php|sh))(/.*)?$;
