transfer encoding ok + HEAD requests

--- a/webserv.conf
+++ b/webserv.conf
@@ -43,7 +43,7 @@ server
 	}
 
 	location ~ ^(.+\.(?:php|sh))(/.*)?$ {
-		accept_methods		GET POST;
+		accept_methods		GET POST HEAD;
 		root				/simple_site/php_files;
 		execute_cgi			auto;
 		cgi_split_path_info ^(.+\.(?:php|sh))(/.*)?$;
