--- a/webserv.conf
+++ b/webserv.conf
@@ -29,16 +29,24 @@
 
 server
 {
-	listen      0.0.0.0:8001;
+	listen      0.0.0.0:8002;
     server_name webserv.com;
 	error_page 404 /simple_site/error_pages/xxx.html;
 
+	location ~ ^/put/(.+)$ {
+		accept_methods 		PUT;
+		alias 				/simple_site/uploads/$1;
+		max_request_body	4;
+	}
+
 	location / {
-		accept_methods	all;
+		accept_methods	GET HEAD;
 		# auth_basic	"My realm";
 		# auth_basic_user_file /credentials.txt;
     	root			/simple_site;
 		index			index.html;
+
+		max_request_body	4;
 	}
 
 	location ~ ^(.+\.(?:php|sh))(/.*)?$ {
