routing fix, passing tests

--- a/tester.conf
+++ b/tester.conf
@@ -6,27 +6,29 @@ server
 
 	location / {
 		accept_methods		GET;
-    	root				/;
+    	root				/simple_site;
+		index				index.html;
 	}
 
 	location ~ ^/put_test/(.+)$ {
 		accept_methods 		PUT;
-		alias 				/uploads/$1;
+		alias 				/simple_site/uploads/$1;
 	}
 
 	location ~ ^(.+\.(?:bla))(/.*)?$ {
 		accept_methods		POST;
 		root				/;
-		execute_cgi			./testers/ubuntu_cgi_tester;
+		execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
 		cgi_split_path_info ^(.+\.(?:bla))(/.*)?$;
 	}
 
 	location /post_body {
+		alias				/;
 		accept_methods		POST;
 		max_request_body	100;
 	}
 
-	location /directory/ {
+	location /directory {
 		accept_methods		GET;
 		alias				/YoupiBanane;
 		index				youpi.bad_extension;
