--- a/webserv.conf
+++ b/webserv.conf
@@ -29,7 +29,7 @@
 
 server
 {
-	listen      0.0.0.0:8002;
+	listen      0.0.0.0:8001;
     server_name webserv.com;
 	error_page 404 /simple_site/error_pages/xxx.html;
 
@@ -44,7 +44,8 @@ server
 		# auth_basic	"My realm";
 		# auth_basic_user_file /credentials.txt;
     	root			/simple_site;
-		index			index.html;
+		autoindex		off;
+		# index			index.html;
 
 		max_request_body	4;
 	}
