--- a/webserv.conf
+++ b/webserv.conf
@@ -44,7 +44,7 @@ server
 		# auth_basic	"My realm";
 		# auth_basic_user_file /credentials.txt;
     	root			/simple_site;
-		autoindex		off;
+		autoindex		on;
 		# index			index.html;
 
 		max_request_body	4;
