saving before disaster + chunked request wip

--- a/webserv.conf
+++ b/webserv.conf
@@ -45,7 +45,7 @@ server
 		# auth_basic_user_file /credentials.txt;
     	root			/simple_site;
 		autoindex		off;
-		# index			index.html;
+		index			index.html;
 
 		max_request_body	4;
 	}
