--- a/webserv.conf
+++ b/webserv.conf
@@ -29,14 +29,14 @@
 
 server
 {
-	listen      0.0.0.0:8001;
+	listen      localhost:8001;
     server_name webserv.com;
 	error_page 404 /simple_site/error_pages/xxx.html;
 
 	location ~ ^/put/(.+)$ {
 		accept_methods 		PUT;
 		alias 				/simple_site/uploads/$1;
-		max_request_body	4;
+		max_request_body	40;
 	}
 
 	location / {
