connection closed after response

--- a/tester.conf
+++ b/tester.conf
@@ -15,11 +15,11 @@ server
 		alias 				/simple_site/uploads/$1;
 	}
 
-	location ~ ^(.+\.(?:bla))(/.*)?$ {
+	location ~ ^(.+\.bla)(/.*)?$ {
 		accept_methods		POST;
 		root				/;
 		execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
-		cgi_split_path_info ^(.+\.(?:bla))(/.*)?$;
+		cgi_split_path_info ^(.+\.bla)(/.*)?$;
 	}
 
 	location /post_body {
@@ -28,9 +28,17 @@ server
 		max_request_body	100;
 	}
 
+	location ~ ^(/directory)(/.+\.bla)(/.*)?$ {
+		accept_methods		GET POST;
+		alias 				/YoupiBanane$2$3;
+		index				youpi.bad_extension;
+		execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
+		cgi_split_path_info ^(/.+\.bla)(/.*)?$;
+	}
+
 	location /directory {
 		accept_methods		GET;
-		alias				/YoupiBanane;
+		alias 				/YoupiBanane;
 		index				youpi.bad_extension;
 	}
 }
