modified directives to make cgi path split more flexible

--- a/tester.conf
+++ b/tester.conf
@@ -19,7 +19,8 @@ server
 		accept_methods		POST;
 		root				/;
 		execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
-		cgi_split_path_info ^(.+\.bla)(/.*)?$;
+		cgi_script_name		$1;
+		cgi_path_info		$2;
 	}
 
 	location /post_body {
@@ -28,13 +29,14 @@ server
 		max_request_body	100;
 	}
 
-	location ~ ^(/directory)(/.+\.bla)(/.*)?$ {
-		accept_methods		GET POST;
-		alias 				/YoupiBanane$2$3;
-		index				youpi.bad_extension;
-		execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
-		cgi_split_path_info ^(/.+\.bla)(/.*)?$;
-	}
+	# location ~ ^(?:/directory)(/.+\.bla)(/.*)?$ {
+	# 	accept_methods		GET POST;
+	# 	alias 				/YoupiBanane$2$3;
+	# 	index				youpi.bad_extension;
+	# 	execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
+	# 	cgi_script_name		/YoupiBanane$1;
+	# 	cgi_path_info		$2;
+	# }
 
 	location /directory {
 		accept_methods		GET;
