--- a/webserv.conf
+++ b/webserv.conf
@@ -29,9 +29,9 @@
 
 server
 {
-	listen      localhost:8001;
-    server_name webserv.com;
-	error_page 404 /simple_site/error_pages/xxx.html;
+	listen      	localhost:8003;
+    server_name 	webserv.com;
+	error_page 404 	/simple_site/error_pages/xxx.html;
 
 	location ~ ^/put/(.+)$ {
 		accept_methods 		PUT;
@@ -40,20 +40,25 @@ server
 	}
 
 	location / {
-		accept_methods	GET HEAD;
-		# auth_basic	"My realm";
-		# auth_basic_user_file /credentials.txt;
-    	root			/simple_site;
-		autoindex		on;
-		# index			index.html;
-
+		accept_methods		GET HEAD;
+    	root				/simple_site;
+		index				index.html;
+		autoindex			on;
 		max_request_body	4;
+		# auth_basic		"My realm";
+		# auth_basic_user_file /credentials.txt;
 	}
 
 	location ~ ^(.+\.(?:php|sh))(/.*)?$ {
 		accept_methods		GET POST HEAD;
 		root				/simple_site/php_files;
 		execute_cgi			auto;
-		cgi_split_path_info ^(.+\.(?:php|sh))(/.*)?$;
+		cgi_script_name		$1;
+		cgi_path_info		$2;
+	}
+
+	location ~ /([^/]+)/([^/]+)/?$ {
+		alias 				/hello/$2/$1;
+		autoindex			on;
 	}
 }
