more tests passing

--- a/webserv.conf
+++ b/webserv.conf
@@ -29,7 +29,7 @@
 
 server
 {
-	listen      	localhost:8003;
+	listen      	localhost:8001;
     server_name 	webserv.com;
 	error_page 404 	/simple_site/error_pages/xxx.html;
 
@@ -57,8 +57,8 @@ server
 		cgi_path_info		$2;
 	}
 
-	location ~ /([^/]+)/([^/]+)/?$ {
-		alias 				/hello/$2/$1;
-		autoindex			on;
-	}
+	# location ~ /([^/]+)/([^/]+)/?$ {
+	# 	alias 				/hello/$2/$1;
+	# 	autoindex			on;
+	# }
 }
