--- a/tester.conf
+++ b/tester.conf
@@ -1,6 +1,6 @@
 server
 {
-	listen      0.0.0.0:8002;
+	listen      0.0.0.0:8001;
     server_name webserv.com;
 	error_page 404 /simple_site/error_pages/xxx.html;
 
@@ -15,6 +15,15 @@ server
 		alias 				/simple_site/uploads/$1;
 	}
 
+	location ~ ^(/directory)(/.+\.bla)(/.*)?$ {
+		accept_methods		POST;
+		alias 				/YoupiBanane$2$3;
+		index				youpi.bad_extension;
+		execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
+		cgi_script_name		$1$2;
+		cgi_path_info		$3;
+	}
+	
 	location ~ ^(.+\.bla)(/.*)?$ {
 		accept_methods		POST;
 		root				/;
@@ -28,15 +37,6 @@ server
 		accept_methods		POST;
 		max_request_body	100;
 	}
-
-	# location ~ ^(?:/directory)(/.+\.bla)(/.*)?$ {
-	# 	accept_methods		GET POST;
-	# 	alias 				/YoupiBanane$2$3;
-	# 	index				youpi.bad_extension;
-	# 	execute_cgi			/home/luis/Desktop/42/webserv/testers/ubuntu_cgi_tester;
-	# 	cgi_script_name		/YoupiBanane$1;
-	# 	cgi_path_info		$2;
-	# }
 
 	location /directory {
 		accept_methods		GET;
