--- a/tester.conf
+++ b/tester.conf
@@ -32,10 +32,13 @@ server
 		cgi_path_info		$2;
 	}
 
-	location /post_body {
-		alias				/;
+	location ~ ^/post_body(/.+)?$ {
+		alias				/simple_site/php_files/test.php;
 		accept_methods		POST;
 		max_request_body	100;
+		execute_cgi			auto;
+		cgi_script_name		$1;
+		cgi_path_info		$1;
 	}
 
 	location /directory {
