--- a/webserv.conf
+++ b/webserv.conf
@@ -44,7 +44,7 @@ server
     	root				/simple_site;
 		index				index.html;
 		autoindex			on;
-		max_request_body	4;
+		# max_request_body	4;
 		# auth_basic		"My realm";
 		# auth_basic_user_file /credentials.txt;
 	}
